Add employee list, employee detail

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
 <header class="navbar header">
   <section class="navbar-section">
     <a routerLink="/products" routerLinkActive="active" class="navbar-brand mr-2">Caddisfly</a>
-    <a href="..." class="btn btn-link">Docs</a>    
+    <a href="..." class="btn btn-link">Docs</a>
     <a routerLink="/store" routerLinkActive="active" class="btn btn-link">Store</a>
     <a routerLink="/cart" routerLinkActive="active" class="btn btn-link">Cart</a>
   </section>
   <section class="navbar-center">
-    
+
   </section>
   <section class="navbar-section">
     <div class="input-group input-inline">
@@ -20,7 +20,7 @@
   <router-outlet></router-outlet>
 </section>
 <footer class="footer">
-  <p>Designed and built with <span class="text-error">♥</span> by <a href="https://twitter.com/xsmashraidx"
-      target="_blank">Yan Zhu</a>. Licensed under the <a href="https://github.com/smashraidE" target="_blank">MIT
-      License</a>.</p>
+  <div class="p-centered">
+    © 2017-2020 Company, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a>
+  </div>
 </footer>
