--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -16,7 +16,7 @@
       
         <button (click)="share()">
           Share
-          <i class="icon icon--heart"></i>          
+          <i class="icon icon--user"></i>          
         </button>
       
       </div>
