--- a/src/assets/icons/_icons-base.scss
+++ b/src/assets/icons/_icons-base.scss
@@ -1,49 +1,53 @@
 $data-svg-prefix: 'data:image/svg+xml;utf-8,';
 $icons: (
-  'download': '<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>cloud, download, storage, memory, data</title><path d="M20.57,9.43A8,8,0,0,0,5.26,10,5,5,0,1,0,5,20h5V18H5a3,3,0,0,1,0-6,3.1,3.1,0,0,1,.79.12l1.12.31.14-1.15a6,6,0,0,1,11.74-.82l.15.54.54.16A3.46,3.46,0,0,1,22,14.5,3.5,3.5,0,0,1,18.5,18H16v2h2.5A5.48,5.48,0,0,0,20.57,9.43Z"/><polygon points="12 11 12 15.59 10.71 14.29 9.29 15.71 13 19.41 16.71 15.71 15.29 14.29 14 15.59 14 11 12 11" stroke="%%COLOR%%" fill="%%COLOR%%"/></svg>',  
-  'download2': '<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title>download2</title><path d="M28 16h-5l-7 7-7-7h-5l-4 8v2h32v-2l-4-8zM0 28h32v2h-32v-2zM18 10v-8h-4v8h-7l9 9 9-9h-7z" stroke="%%COLOR%%" fill="%%COLOR%%"></path></svg>',
-  'heart': '<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32"><title>heart</title><path d="M23.6 2c-3.363 0-6.258 2.736-7.599 5.594-1.342-2.858-4.237-5.594-7.601-5.594-4.637 0-8.4 3.764-8.4 8.401 0 9.433 9.516 11.906 16.001 21.232 6.13-9.268 15.999-12.1 15.999-21.232 0-4.637-3.763-8.401-8.4-8.401z" stroke="%%COLOR%%" fill="%%COLOR%%"></path></svg>'
+  'download': '<svg xmlns="http://www.w3.org/2000/svg" stroke="%%COLOR%%" fill="%%COLOR%%" viewBox="0 0 24 24"><title>cloud, download, storage, memory, data</title><path d="M20.57,9.43A8,8,0,0,0,5.26,10,5,5,0,1,0,5,20h5V18H5a3,3,0,0,1,0-6,3.1,3.1,0,0,1,.79.12l1.12.31.14-1.15a6,6,0,0,1,11.74-.82l.15.54.54.16A3.46,3.46,0,0,1,22,14.5,3.5,3.5,0,0,1,18.5,18H16v2h2.5A5.48,5.48,0,0,0,20.57,9.43Z"/><polygon points="12 11 12 15.59 10.71 14.29 9.29 15.71 13 19.41 16.71 15.71 15.29 14.29 14 15.59 14 11 12 11"/></svg>',  
+  'download2': '<svg xmlns="http://www.w3.org/2000/svg" stroke="%%COLOR%%" fill="%%COLOR%%" viewBox="0 0 32 32"><title>download2</title><path d="M28 16h-5l-7 7-7-7h-5l-4 8v2h32v-2l-4-8zM0 28h32v2h-32v-2zM18 10v-8h-4v8h-7l9 9 9-9h-7z"></path></svg>',
+  'heart': '<svg xmlns="http://www.w3.org/2000/svg" stroke="%%COLOR%%" fill="%%COLOR%%" viewBox="0 0 32 32"><title>heart</title><path d="M23.6 2c-3.363 0-6.258 2.736-7.599 5.594-1.342-2.858-4.237-5.594-7.601-5.594-4.637 0-8.4 3.764-8.4 8.401 0 9.433 9.516 11.906 16.001 21.232 6.13-9.268 15.999-12.1 15.999-21.232 0-4.637-3.763-8.401-8.4-8.401z"></path></svg>',
+  'user': '<svg xmlns="http://www.w3.org/2000/svg" stroke="%%COLOR%%" fill="%%COLOR%%" viewBox="0 0 24 24"><title/><circle cx="12" cy="8" r="4"/><path d="M20,19v1a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V19a6,6,0,0,1,6-6h4A6,6,0,0,1,20,19Z"/></svg>'
 );
 
 @function str-replace( $string, $search, $replace: '' ) {
-    $index: str-index( $string, $search );  
-    @if $index {
-      @return str-slice( $string, 1, $index - 1 ) + $replace + str-replace( str-slice( $string, $index + str-length( $search ) ), $search, $replace);
-    }  
+  $index: str-index( $string, $search );  
+  @if $index {
+    @return str-slice( $string, 1, $index - 1 ) + $replace + str-replace( str-slice( $string, $index + str-length( $search ) ), $search, $replace);
+  }  
     @return $string;
-  }
+}
 
-  @function get-icon( $icon, $color: #000000 ) {
-    @if 'color' != type-of( $color ) {  
-      @warn 'The requested color - "' + $color + '" - was not recognized as a Sass color value.';
-      @return null;
-    }
-  
-    @if map-has-key( $icons, $icon ) {  
-      $icon:        map-get( $icons, $icon );
-      $placeholder: '%%COLOR%%';
-      $data-uri:    str-replace( url( $data-svg-prefix + $icon ), $placeholder, $color );  
-      @return str-replace( $data-uri, '#', '%23' );
-    }
-  
-    @warn 'The requested icon - "' + $icon + '" - is not defined in the $icons map.';
+@function get-icon( $icon, $color: #000000 ) {
+  @if 'color' != type-of( $color ) {  
+    @warn 'The requested color - "' + $color + '" - was not recognized as a Sass color value.';
     @return null;
   }
-
-  .icon {   
-      
-    
-    &--download {        
-          background-image: get-icon( 'download', rgb(41, 25, 189) ); // The ", #fff" isn't strictly necessary, because white is already our default        
-      }
-      
-      &--heart {      
-          background-image: get-icon( 'heart');      
-      }  
-
-      &--download2 {      
-        background-image: get-icon( 'download2', #2bd982 );        
-    }
+ 
+  @if map-has-key( $icons, $icon ) {  
+    $icon:        map-get( $icons, $icon );
+    $placeholder: '%%COLOR%%';
+    $data-uri:    str-replace( url( $data-svg-prefix + $icon ), $placeholder, $color );  
+    @return str-replace( $data-uri, '#', '%23' );
   }
+  
+  @warn 'The requested icon - "' + $icon + '" - is not defined in the $icons map.';
+  @return null;
+}
+
+
+  
+
+.icon {
+
+  @each  $icon in $icons {
+    $key: nth($icon, 1);
+    $value: nth($icon, 2);   
+  
+    &--#{$key} {
+      background-image: get-icon( quote($key) );
+    }   
+  }
+
+  &--user_white {
+    background-image: get-icon( 'user', #ffffff) ;
+  }
+}
 
 
