--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -89,6 +89,15 @@
     </div>
     <div class="form-group">
         <div class="col-3 col-sm-12">
+            <label class="form-label" for="photo">Photo</label>
+        </div>
+        <div class="col-9 col-sm-12">
+            <input class="form-input" type="file" name="photo" id="photo" (change)="onFileChange($event.target.files)">
+            <p class="form-input-hint" *ngIf="f.postalCode.invalid && (f.postalCode.dirty || f.postalCode.touched)">this field is required.</p>
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-3 col-sm-12">
 
         </div>
         <div class="col-9 col-sm-12">
