--- a/src/app/components/employee-detail/employee-detail.component.html
+++ b/src/app/components/employee-detail/employee-detail.component.html
@@ -1,38 +1,39 @@
 <form class="form-horizontal" [formGroup]="employeeForm" (ngSubmit)="onSubmit()">
-    <div class="form-group" 
-    >
+    <div class="form-group">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="title">Title</label>
         </div>
-        <div class="col-9 col-sm-12">
-            <select class="form-select" name="title" formControlName="title" 
-           >
+        <div class="col-9 col-sm-12" [ngClass]="{'has-error': isSubmitted && f.title.errors, 'has-success': !f.title.errors}">
+            <select class="form-select" name="title" formControlName="title">
+                <option value="">--- Select Title ---</option>
                 <option value="Mr">Mr.</option>
                 <option value="Mrs">Mrs.</option>
                 <option value="Ms">Ms.</option>
                 <option value="Miss">Miss.</option>
             </select>
-            <!-- <p class="form-input-hint" *ngIf="name.invalid && (name.dirty || name.touched)">this field is required.</p> -->
+            <p class="form-input-hint" *ngIf="f.title.invalid && (f.title.dirty || f.title.touched)">this field is
+                required.</p>
         </div>
     </div>
-    <div class="form-group"
-     [ngClass] = "{'has-error': isSubmitted && f.firstName.errors}">
+    <div class="form-group" [ngClass]="{'has-error': isSubmitted && f.firstName.errors, 'has-success': !f.firstName.errors}">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="firstName">FirstName</label>
         </div>
         <div class="col-9 col-sm-12">
-            <input class="form-input" type="text" id="firstName" name="firstName" placeholder="FirstName" formControlName="firstName" required
-            >
-            <p class="form-input-hint" *ngIf="f.firstName.invalid && (f.firstName.dirty || f.firstName.touched)">this field is required.</p>
+            <input class="form-input" type="text" id="firstName" name="firstName" placeholder="FirstName"
+                formControlName="firstName" required>
+            <p class="form-input-hint" *ngIf="f.firstName.invalid && (f.firstName.dirty || f.firstName.touched)">this
+                field is required.</p>
         </div>
     </div>
     <div class="form-group">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="lastName">LastName</label>
         </div>
-        <div class="col-9 col-sm-12">
+        <div class="col-9 col-sm-12" [ngClass]="{'has-error': isSubmitted && f.lastName.errors}">
             <input class="form-input" type="text" id="lastName" placeholder="LastName" formControlName="lastName">
-            <p class="form-input-hint" *ngIf="f.lastName.invalid && (f.lastName.dirty || f.lastName.touched)">this field is required.</p>
+            <p class="form-input-hint" *ngIf="f.lastName.invalid && (f.lastName.dirty || f.lastName.touched)">this field
+                is required.</p>
         </div>
     </div>
     <div class="form-group">
@@ -48,43 +49,49 @@
                 <input type="radio" name="gender" value="F" formControlName="gender">
                 <i class="form-icon"></i> Female
             </label>
-            <p class="form-input-hint" *ngIf="f.gender.invalid && (f.gender.dirty || f.gender.touched)">this field is required.</p>
+            <p class="form-input-hint" *ngIf="f.gender.invalid && (f.gender.dirty || f.gender.touched)">this field is
+                required.</p>
         </div>
     </div>
     <div class="form-group">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="address">Address</label>
         </div>
-        <div class="col-9 col-sm-12">
+        <div class="col-9 col-sm-12" [ngClass]="{'has-error': isSubmitted && f.address.errors}">
             <input class="form-input" type="text" id="address" placeholder="Address" formControlName="address">
-            <p class="form-input-hint" *ngIf="f.address.invalid && (f.address.dirty || f.address.touched)">this field is required.</p>
+            <p class="form-input-hint" *ngIf="f.address.invalid && (f.address.dirty || f.address.touched)">this field is
+                required.</p>
         </div>
     </div>
     <div class="form-group">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="city">City</label>
         </div>
-        <div class="col-9 col-sm-12">
+        <div class="col-9 col-sm-12" [ngClass]="{'has-error': isSubmitted && f.city.errors}">
             <input class="form-input" type="text" id="city" placeholder="City" formControlName="city">
-            <p class="form-input-hint" *ngIf="f.city.invalid && (f.city.dirty || f.city.touched)">this field is required.</p>
+            <p class="form-input-hint" *ngIf="f.city.invalid && (f.city.dirty || f.city.touched)">this field is
+                required.</p>
         </div>
     </div>
     <div class="form-group">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="region">Region</label>
         </div>
-        <div class="col-9 col-sm-12">
+        <div class="col-9 col-sm-12" [ngClass]="{'has-error': isSubmitted && f.region.errors}">
             <input class="form-input" type="text" id="region" placeholder="Region" formControlName="region">
-            <p class="form-input-hint" *ngIf="f.region.invalid && (f.region.dirty || f.region.touched)">this field is required.</p>
+            <p class="form-input-hint" *ngIf="f.region.invalid && (f.region.dirty || f.region.touched)">this field is
+                required.</p>
         </div>
     </div>
     <div class="form-group">
         <div class="col-3 col-sm-12">
             <label class="form-label" for="postalCode">Postal Code</label>
         </div>
-        <div class="col-9 col-sm-12">
-            <input class="form-input" type="text" id="postalCode" placeholder="Postal Code" formControlName="postalCode">
-            <p class="form-input-hint" *ngIf="f.postalCode.invalid && (f.postalCode.dirty || f.postalCode.touched)">this field is required.</p>
+        <div class="col-9 col-sm-12" [ngClass]="{'has-error': isSubmitted && f.postalCode.errors}">
+            <input class="form-input" type="text" id="postalCode" placeholder="Postal Code"
+                formControlName="postalCode">
+            <p class="form-input-hint" *ngIf="f.postalCode.invalid && (f.postalCode.dirty || f.postalCode.touched)">this
+                field is required.</p>
         </div>
     </div>
     <div class="form-group">
@@ -93,7 +100,8 @@
         </div>
         <div class="col-9 col-sm-12">
             <input class="form-input" type="file" name="photo" id="photo" (change)="onFileChange($event.target.files)">
-            <p class="form-input-hint" *ngIf="f.postalCode.invalid && (f.postalCode.dirty || f.postalCode.touched)">this field is required.</p>
+            <p class="form-input-hint" *ngIf="f.postalCode.invalid && (f.postalCode.dirty || f.postalCode.touched)">this
+                field is required.</p>
         </div>
     </div>
     <div class="form-group">
@@ -101,7 +109,7 @@
 
         </div>
         <div class="col-9 col-sm-12">
-            <button type="submit" class="btn btn-primary mr-2" >Submit</button>
+            <button type="submit" class="btn btn-primary mr-2">Submit</button>
         </div>
     </div>
 
